RESOLVED FIXED200238
[ContentChangeObserver] ChromeClient::observedContentChange() name is misleading
https://bugs.webkit.org/show_bug.cgi?id=200238
Summary [ContentChangeObserver] ChromeClient::observedContentChange() name is misleading
alan
Reported 2019-07-29 13:43:56 PDT
It actually means we are done with observing content changes.
Attachments
Patch (11.11 KB, patch)
2019-07-29 13:50 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-07-29 13:44:38 PDT
alan
Comment 2 2019-07-29 13:50:57 PDT
WebKit Commit Bot
Comment 3 2019-07-29 14:32:22 PDT
Comment on attachment 375095 [details] Patch Clearing flags on attachment: 375095 Committed r247922: <https://trac.webkit.org/changeset/247922>
WebKit Commit Bot
Comment 4 2019-07-29 14:32:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.